# series

./: ABOUT_SERIES.md  CMakeLists.txt  README.md  coord.hpp  coord_test.cpp  series.cpp  series.hpp  series_test.cpp
